@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-27T08:10:11Z",
-  "count_outdated" : 1710,
-  "uniques_outdated" : 111,
-  "count" : 1798,
-  "uniques" : 123,
+  "timestamp" : "2022-07-28T08:10:42Z",
+  "count_outdated" : 1712,
+  "uniques_outdated" : 112,
+  "count" : 1799,
+  "uniques" : 124,
   "views" : [
-    {
-      "timestamp": "2022-07-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-18T00:00:00Z",
       "count": 2,
@@ -63,6 +56,13 @@
     },
     {
       "timestamp": "2022-07-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-28T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
