@@ -1,12 +1,7 @@
 {
-  "count": 88,
+  "count": 87,
   "uniques": 4,
   "views": [
-    {
-      "timestamp": "2022-07-14T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-18T00:00:00Z",
       "count": 2,
@@ -44,6 +39,11 @@
     },
     {
       "timestamp": "2022-07-27T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-28T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
