@@ -1,3 +1,10 @@
+2022-07-28T08:10:42Z:
+* notice: last 14d: unq all: 4 87
+* notice: prev accum: outdated-unq outdated-all / unq all: 111 1710 / 123 1798
+* notice: next accum: outdated-unq outdated-all / unq all: 112 1712 / 124 1799
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-07-14] / [2022-07-28]
+
 2022-07-27T08:10:11Z:
 * notice: last 14d: unq all: 4 88
 * notice: prev accum: outdated-unq outdated-all / unq all: 111 1710 / 122 1797
